@startuml
class Component {
  +int id
  +QString name
  +QString type
  +int quantity
  +QString location
  +QDate purchaseDate
}
class DatabaseManager {
  +connect(): bool
  +initSchema(schemaFile): bool
  +fetchComponents(filter): QList<Component>
  +addComponent(c): bool
  +updateComponent(c): bool
  +deleteComponent(id): bool
}
class InventoryManager {
  +refresh(filter): QList<Component>
  +add(c): bool
  +edit(c): bool
  +remove(id): bool
}
class ReportGenerator {
  +exportToCSV(list, path): bool
  +exportToPDF(list, path): bool
}
class MainWindow
class AddEditDialog

InventoryManager --> DatabaseManager
MainWindow --> InventoryManager
MainWindow --> ReportGenerator
MainWindow --> AddEditDialog
@enduml
